[gd_scene load_steps=10 format=2]

[ext_resource path="res://scripts/forge/gui/ForgeGUI.gd" type="Script" id=1]
[ext_resource path="res://scripts/forge/gui/fsm/State.gd" type="Script" id=2]
[ext_resource path="res://assets/GUI/lifebar_bg.png" type="Texture" id=3]
[ext_resource path="res://assets/GUI/lifebar_fill.png" type="Texture" id=4]
[ext_resource path="res://scripts/forge/gui/InputFields.gd" type="Script" id=5]
[ext_resource path="res://scenes/forge/gui/ItemNameInput.tscn" type="PackedScene" id=6]
[ext_resource path="res://scenes/forge/gui/ItemDescriptionInput.tscn" type="PackedScene" id=7]
[ext_resource path="res://scenes/forge/gui/ItemTypeSelector.tscn" type="PackedScene" id=8]
[ext_resource path="res://scenes/forge/gui/WeaponTypeSelector.tscn" type="PackedScene" id=9]

[node name="ForgeGUI" type="MarginContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_constants/margin_right = 0
custom_constants/margin_top = 0
custom_constants/margin_left = 0
custom_constants/margin_bottom = 0
script = ExtResource( 1 )
_sections_unfolded = [ "Margin" ]

[node name="State" type="Node" parent="." index="0"]

script = ExtResource( 2 )

[node name="Tween" type="Tween" parent="." index="1"]

repeat = false
playback_process_mode = 1
playback_speed = 1.0
playback/active = false
playback/repeat = false
playback/speed = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="." index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 1280.0
margin_bottom = 720.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 0

[node name="Top" type="Control" parent="VBoxContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 1280.0
margin_bottom = 237.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 3
_sections_unfolded = [ "Size Flags" ]

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/Top" index="0"]

anchor_left = 0.5
anchor_top = 0.0
anchor_right = 0.5
anchor_bottom = 0.0
margin_left = -198.0
margin_right = 198.0
margin_bottom = 73.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_constants/margin_right = 0
custom_constants/margin_top = 20
custom_constants/margin_left = 0
custom_constants/margin_bottom = 0
_sections_unfolded = [ "custom_constants" ]

[node name="ItemCreationProgressBar" type="TextureProgress" parent="VBoxContainer/Top/MarginContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 20.0
margin_right = 396.0
margin_bottom = 73.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
min_value = 0.0
max_value = 100.0
step = 1.0
page = 0.0
value = 20.0
exp_edit = false
rounded = false
texture_under = ExtResource( 3 )
texture_over = null
texture_progress = ExtResource( 4 )
radial_fill_degrees = 360.0
radial_center_offset = Vector2( 0, 0 )
nine_patch_stretch = false
_sections_unfolded = [ "Textures" ]

[node name="Center" type="Control" parent="VBoxContainer" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 241.0
margin_right = 1280.0
margin_bottom = 478.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 3
_sections_unfolded = [ "Margin", "Size Flags" ]

[node name="ItemNameSelector" type="VBoxContainer" parent="VBoxContainer/Center" index="0"]

anchor_left = 0.5
anchor_top = 0.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -117.0
margin_right = 118.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 0
script = ExtResource( 5 )
_sections_unfolded = [ "Margin" ]

[node name="ItemNameInput" parent="VBoxContainer/Center/ItemNameSelector" index="0" instance=ExtResource( 6 )]

[node name="ItemDescriptionInput" parent="VBoxContainer/Center/ItemNameSelector" index="1" instance=ExtResource( 7 )]

margin_top = 28.0
margin_bottom = 52.0

[node name="ButtonConfirm" type="Button" parent="VBoxContainer/Center/ItemNameSelector" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 56.0
margin_right = 235.0
margin_bottom = 76.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "START PRODUCTION"
flat = false
align = 1

[node name="ItemTypeSelector" parent="VBoxContainer/Center" index="1" instance=ExtResource( 8 )]

anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -235.0
margin_top = -29.0
margin_right = 235.0
margin_bottom = 29.0
_sections_unfolded = [ "Margin", "Size Flags" ]

[node name="WeaponTypeSelector" parent="VBoxContainer/Center" index="2" instance=ExtResource( 9 )]

anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -243.5
margin_top = -30.0
margin_right = 243.5
margin_bottom = 30.0

[node name="Bottom" type="Control" parent="VBoxContainer" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 482.0
margin_right = 1280.0
margin_bottom = 720.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 3
_sections_unfolded = [ "Size Flags" ]

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/Bottom" index="0"]

anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -50.5
margin_top = -40.0
margin_right = 50.5
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_constants/margin_right = 0
custom_constants/margin_top = -50
custom_constants/margin_left = 0
custom_constants/margin_bottom = 50
_sections_unfolded = [ "custom_constants" ]

[node name="ButtonCreateItem" type="Button" parent="VBoxContainer/Bottom/MarginContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = -50.0
margin_right = 101.0
margin_bottom = -10.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "CREATE ITEM"
flat = false
align = 1


